apps/dssp-python-test-app-2/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-python-test-app-2
  namespace: prod
  labels:
    app: dssp-python-test-app-2
    backstage.io/kubernetes-id: dssp-python-test-app-2
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-python-test-app-2
  template:
    metadata:
      labels:
        app: dssp-python-test-app-2
        backstage.io/kubernetes-id: dssp-python-test-app-2
        environment: prod
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5000"
    spec:
      containers:
        - name: dssp-python-test-app-2
          image: jaykumark7/dssp-python-test-app-2:1.0.2
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
              ephemeral-storage: "100Mi"
            limits:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "100Mi"
