apps/dssp-python-test-app-2/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-python-test-app-2
  namespace: prod
  labels:
    backstage.io/kubernetes-id: dssp-python-test-app-2
    environment: prod
spec:
  selector:
    app: dssp-python-test-app-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
 


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: dssp-python-test-app-2-ingress
# spec:
#   ingressClassName: gce
#   rules:
#   - host: dssp-python-test-app-2.example.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: dssp-python-test-app-2
#             port:
#               number: 80
