apps/dssp-python-test-app-2/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dssp-python-test-app-2
  namespace: prod
  labels:
    backstage.io/kubernetes-id: dssp-python-test-app-2
    environment: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /dssp-python-test-app-2-prod(/|$)(.*) 
            pathType: ImplementationSpecific
            backend:
              service:
                name: dssp-python-test-app-2
                port:
                  number: 80
